cloudformation/cftemplate_ec2_for_deep_learning.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: AWS EC2 for SSH Cloud9 Env to experiment Deep Learning with ElasticIP, Security Group, and EC2 Key pair

Parameters:
  ImageId:
    Description: Amazon Machine Image (AMI)
    Type: String
    Default: ami-06c414f3ba4a59e2f

  EC2InstanceType:
    Description: EC2 instance type on which IDE runs
    Type: String
    Default: g4dn.xlarge

  KeyName:
    Description: Keypair name
    Type: String
    Default: my-key

  SubnetId:
    Description: Public subnet in vpc (For example, check your pucblic-subnet ip in default vpc.)
    Type: String
    Default: subnet-XXXXXXXXXXXXXXXXX
  VolumeSize:
    Description: root volume size
    Type: String
    Default: 100

Resources:
  # EC2 Key pair
  NewKeyPair:
    Type: "AWS::EC2::KeyPair"
    Properties:
      KeyName: !Ref "KeyName"

  # Security Group
  SSHSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable SSH access via port 22
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0

  HTTPSecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: HTTP access port 80
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  # EC2 Instance
  Instance:
    Type: "AWS::EC2::Instance"
    Properties:
      AvailabilityZone: "ap-northeast-1a"
      ImageId: !Ref "ImageId"
      InstanceType: !Ref "EC2InstanceType"
      KeyName: !Ref "NewKeyPair"
      SecurityGroupIds:
        - !GetAtt [SSHSecurityGroup, GroupId]
        - !GetAtt [HTTPSecurityGroup, GroupId]
      SubnetId: !Ref "SubnetId"
      BlockDeviceMappings:
        - DeviceName: /dev/sda1
          Ebs:
            VolumeType: gp3
            VolumeSize: !Ref "VolumeSize"
            DeleteOnTermination: "true"
            Encrypted: "false"
      Tags:
        - Key: "Name"
          Value: !Sub "${AWS::StackName}-EC2Instance"
      # install latest git, nodejs, python2, autopep8
      UserData:
        Fn::Base64: |
          #!/bin/bash
          sudo -E add-apt-repository ppa:git-core/ppa -y
          sudo apt-get update && sudo apt-get -y upgrade
          sudo apt-get -y install nodejs
          sudo apt -y install python2
          sudo /usr/local/bin/pip install --upgrade autopep8
          git config --global init.defaultBranch main
          sudo reboot

  # ElasticIP
  ElasticIP:
    Type: "AWS::EC2::EIP"
    Properties:
      Domain: vpc

  ElasticIPAssociate:
    Type: AWS::EC2::EIPAssociation
    Properties:
      AllocationId: !GetAtt ElasticIP.AllocationId
      InstanceId: !Ref Instance
